[package]
name = "trellis-net"
description = "A simple networking library for Rust."
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ShardulNalegave/trellis"
homepage = "https://github.com/ShardulNalegave/trellis"
keywords = ["networking", "simple", "tcp", "stream"]
exclude = ["example-rust"]

[dependencies]
bytes = "1"
async-trait = "0.1"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.uuid]
version = "1"
features = ["v4"]